--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
+aes = "0.8.4"
+cipher = "0.4.4"
+hex = "0.4.3"
+block-padding = "0.3.3"
+generic-array = "1.0.0"
